fix: correct mobile menu button alignment vol.10

--- a/css/style.css
+++ b/css/style.css
@@ -3270,11 +3270,10 @@ template {
   line-height: 18px;
   font-weight: 400;
   font-family: "Gilroy", sans-serif;
-  display: flex;
-  align-items: center;
+  position: relative;
   width: 100%;
   margin-bottom: 17px;
-  padding: 19px 0 19px 7px;
+  padding: 19px 0 19px 30px;
   border-bottom: 1px solid #525252;
   color: #a4a4a4; }
   @media screen and (max-width: 375px) {
@@ -3289,6 +3288,10 @@ template {
     display: block; }
 
 .mobile-catalog__link-icon {
+  position: absolute;
+  top: 50%;
+  left: 7px;
+  transform: translateY(-50%);
   display: block;
   margin-right: 3px;
   fill: transparent;
